refactor/change name model Movie to Film
