# src/swagger.json
@@ -1,13 +1,11 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "Sample API",
-    "description": "Backend API",
+    "title": "API de filmes",
+    "description": "API para consulta de filmes",
     "version": "1.0.0",
     "contact": {
-      "E-mail": "wericknalyson@gmail.com",
-      "Linkedin": "https://www.linkedin.com/in/werick-nalyson",
-      "Github": "https://github.com/Werick-Nalyson"
+      "email": "wericknalyson@gmail.com"
     }
   },
   "servers": [
@@ -17,10 +15,10 @@
     }
   ],
   "paths": {
-    "/movies": {
+    "/films": {
       "get": {
         "tags": [
-          "Movies"
+          "Films"
         ],
         "parameters": [
           {
@@ -41,7 +39,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "$ref": "#/components/schemas/Movie"
+                  "$ref": "#/components/schemas/Film"
                 }
               }
             }
@@ -49,10 +47,10 @@
         }
       }
     },
-    "/movies/charge-movies": {
+    "/films/charge-films": {
       "get": {
         "tags": [
-          "Movies"
+          "Films"
         ],
         "summary": "Carrega/Atualiza o banco de dados com os filmes da API https://ghibliapi.herokuapp.com/#tag/Films",
         "responses": {
@@ -62,7 +60,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "$ref": "#/components/schemas/Movie"
+                  "$ref": "#/components/schemas/Film"
                 }
               }
             }
@@ -73,7 +71,7 @@
   },
   "components": {
     "schemas": {
-      "Movie": {
+      "Film": {
         "type": "object",
         "properties": {
           "_id": {
@@ -82,7 +80,7 @@
           "title": {
             "type": "string"
           },
-          "movie_banner": {
+          "film_banner": {
             "type": "string"
           },
           "description": {
